Update pom.xml for jar installs